; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_mesh.c_mesh_vdetach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net80211/extr_ieee80211_mesh.c_mesh_vdetach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ieee80211vap = type { %struct.ieee80211_mesh_state*, %struct.TYPE_3__* }
%struct.ieee80211_mesh_state = type { %struct.TYPE_4__*, i32 }
%struct.TYPE_4__ = type { i32 (%struct.ieee80211vap*)* }
%struct.TYPE_3__ = type { i32 }

@mesh_vdetach_peers = common dso_local global i32 0, align 4
@M_80211_VAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ieee80211vap*)* @mesh_vdetach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mesh_vdetach(%struct.ieee80211vap* %0) #0 {
  %2 = alloca %struct.ieee80211vap*, align 8
  %3 = alloca %struct.ieee80211_mesh_state*, align 8
  store %struct.ieee80211vap* %0, %struct.ieee80211vap** %2, align 8
  %4 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %5 = getelementptr inbounds %struct.ieee80211vap, %struct.ieee80211vap* %4, i32 0, i32 0
  %6 = load %struct.ieee80211_mesh_state*, %struct.ieee80211_mesh_state** %5, align 8
  store %struct.ieee80211_mesh_state* %6, %struct.ieee80211_mesh_state** %3, align 8
  %7 = load %struct.ieee80211_mesh_state*, %struct.ieee80211_mesh_state** %3, align 8
  %8 = getelementptr inbounds %struct.ieee80211_mesh_state, %struct.ieee80211_mesh_state* %7, i32 0, i32 1
  %9 = call i32 @callout_drain(i32* %8)
  %10 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %11 = getelementptr inbounds %struct.ieee80211vap, %struct.ieee80211vap* %10, i32 0, i32 1
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i32, i32* @mesh_vdetach_peers, align 4
  %15 = call i32 @ieee80211_iterate_nodes(i32* %13, i32 %14, i32* null)
  %16 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %17 = call i32 @ieee80211_mesh_rt_flush(%struct.ieee80211vap* %16)
  %18 = load %struct.ieee80211_mesh_state*, %struct.ieee80211_mesh_state** %3, align 8
  %19 = call i32 @MESH_RT_LOCK_DESTROY(%struct.ieee80211_mesh_state* %18)
  %20 = load %struct.ieee80211_mesh_state*, %struct.ieee80211_mesh_state** %3, align 8
  %21 = getelementptr inbounds %struct.ieee80211_mesh_state, %struct.ieee80211_mesh_state* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = load i32 (%struct.ieee80211vap*)*, i32 (%struct.ieee80211vap*)** %23, align 8
  %25 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %26 = call i32 %24(%struct.ieee80211vap* %25)
  %27 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %28 = getelementptr inbounds %struct.ieee80211vap, %struct.ieee80211vap* %27, i32 0, i32 0
  %29 = load %struct.ieee80211_mesh_state*, %struct.ieee80211_mesh_state** %28, align 8
  %30 = load i32, i32* @M_80211_VAP, align 4
  %31 = call i32 @IEEE80211_FREE(%struct.ieee80211_mesh_state* %29, i32 %30)
  %32 = load %struct.ieee80211vap*, %struct.ieee80211vap** %2, align 8
  %33 = getelementptr inbounds %struct.ieee80211vap, %struct.ieee80211vap* %32, i32 0, i32 0
  store %struct.ieee80211_mesh_state* null, %struct.ieee80211_mesh_state** %33, align 8
  ret void
}

declare dso_local i32 @callout_drain(i32*) #1

declare dso_local i32 @ieee80211_iterate_nodes(i32*, i32, i32*) #1

declare dso_local i32 @ieee80211_mesh_rt_flush(%struct.ieee80211vap*) #1

declare dso_local i32 @MESH_RT_LOCK_DESTROY(%struct.ieee80211_mesh_state*) #1

declare dso_local i32 @IEEE80211_FREE(%struct.ieee80211_mesh_state*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
